# automation-hub

./: .dockerignore  .env.production.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile.dev  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a1aa0fdb316_add_meta_buc_usage_and_insights_cache.py  268de728f6d0_add_analysis_json_to_competitor_cache.py  380095466778_add_last_chat_at_to_users.py  87ceeab046f3_add_media_config_to_project.py  9fc244605bb6_add_content_config_and_content_columns.py  a1b2c3d4e5f6_add_creative_refresh_to_optimization_log.py  a1b2c3d4e5f6_add_last_chat_at_to_users.py  a2b3c4d5e6f7_andromeda_v2_narrative_angle_and_competitor_cache.py  a7b8c9d0e1f2_add_pinterest_pin_generator.py  b2c3d4e5f6a7_remove_n8n_webhook_base_url_from_projects.py  b3c4d5e6f7a8_add_user_meta_tokens.py  c3d4e5f6a7b8_add_meta_api_cache_and_audit_log.py  c4d5e6f7a8b9_add_ads_audit_tables.py  d4e5f6a7b8c9_add_audiences_table.py  d5e6f7a8b9c0_add_token_usage_tables.py  e5f6a7b8c9d0_add_meta_token_expires_at.py  f6a7b8c9d0e1_add_super_admin_role_and_owner_id.py  g7h8i9j0k1l2_tier3a_competitor_intelligence_and_audit_log.py  h8i9j0k1l2m3_add_meta_app_usage_table.py  i9j0k1l2m3n4_add_operation_limit_tables.py
backend/app/: main.py  utils.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  ad_campaign.py  ads_audit.py  (+18 more)
backend/tests/: test_health.py  test_meta_oauth.py  test_token_resolution.py
(+162 files in other folders)
